Defined the committee in Jekyll's _data system, re-organised templates and layouts

--- a/src/app/jekyll/_layouts/front.html
+++ b/src/app/jekyll/_layouts/front.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
 
@@ -6,6 +9,8 @@
   <body>
 
     {% include header.html %}
+
+	{% include jumbotron.html %}
 
     <div class="page-content">
       <div class="wrapper">
