Simplified the design, re-organised the directories as it seems that Jekyll does its own sass preprocessing so there's no need for grunt-sass

--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -1,5 +1,6 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="pull-right"><img id="ieee" src="/assets/img/branding_ieee.png"/></div>
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -8,10 +9,10 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img src="img/branding_logo.png"/></a>
+			<a class="navbar-brand" href="#"><img src="/assets/img/branding_logo.png"/></a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav navbar-right">
+			<ul class="nav navbar-nav ">
 				<li><a href="#">Call for Papers<span class="nav-link-sep highlight">/</span></a></li>
 				<li><a href="#">Commitee<span class="nav-link-sep highlight">/</span></a></li>
 				<li><a href="#">Contact<span class="nav-link-sep highlight">/</span></a></li>
