--- a/src/app/jekyll/_includes/footer.html
+++ b/src/app/jekyll/_includes/footer.html
@@ -1,2 +1,10 @@
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.tinycarousel.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function()
+	{
+		$('#slider1').tinycarousel();
+	});
+</script>
