--- a/src/app/jekyll/_layouts/default.html
+++ b/src/app/jekyll/_layouts/default.html
@@ -6,8 +6,7 @@
   <body>
 
     {% include header.html %}
-
-    <div class="page-content">
+    <div class="page-content-default">
       <div class="wrapper">
 		  {% include twocolumn.html %}
       </div>
