--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -9,15 +9,15 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img src="/assets/img/branding_logo.png"/></a>
+			<a class="navbar-brand" href="/"><img src="/assets/img/branding_logo.png"/></a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav ">
-				<li><a href="#">Call for Papers<span class="nav-link-sep highlight">/</span></a></li>
-				<li><a href="#">Commitee<span class="nav-link-sep highlight">/</span></a></li>
-				<li><a href="#">Contact<span class="nav-link-sep highlight">/</span></a></li>
-				<li><a href="#">Blog<span class="nav-link-sep highlight">/</span></a></li>
-				<li><a href="#">About</a></li>
+				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
+				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Commitee</span></a></li>
+				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Contact</span></a></li>
+				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
+				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
 	</div>
