--- a/src/app/jekyll/_sass/_base.scss
+++ b/src/app/jekyll/_sass/_base.scss
@@ -8,6 +8,31 @@ h2, h3 {
 	margin-bottom:20px;
 }
 
+h4 {
+	margin-bottom:10px;
+}
+
+.page-content-default {
+	margin-top: floor(($navbar-height + 50));
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+	text-decoration: none;
+	border-bottom: 1px dotted $vizsec_dark;
+}
+
+.sidebar > div:not(:last-child) {
+//1px solid $vizsec_highlight;
+	margin-bottom:30px;
+}
+
+.btn {
+	font-family: $font-family-sans-serif; 
+}
+
 .jumbotron {
 	color:$vizsec_light;
 	padding-top:100px;
@@ -28,6 +53,11 @@ h2, h3 {
 	height:20px;
 }
 
+#twitter {
+	height:18px;
+	margin:-2px 8px 0px 20px;
+}
+
 .navbar-nav {
 	padding-left:20px;
 	padding-top:10px;
@@ -43,9 +73,14 @@ h2, h3 {
 	padding-right:0px;
 }
 
+.nav > li > span {
+	padding-top: $navbar-padding-vertical;
+	padding-bottom: $navbar-padding-vertical;
+}
+
 .nav-link-sep {
-	padding-left:20px;
-	padding-right:-10px;
+	padding-left:0px;
+	padding-right:0px;
 }
 
 .committee.name {
