--- a/src/app/jekyll/_sass/_bootstrap_variables.scss
+++ b/src/app/jekyll/_sass/_bootstrap_variables.scss
@@ -19,11 +19,12 @@ $font-size-h5:            $font-size-base !default;
 $font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
 
 $jumbotron-font-size:            ceil(($font-size-base * 1.0)) !default;
-$jumbotron-heading-font-size:    ceil(($font-size-base * 2.8)) !default;
+$jumbotron-heading-font-size:    ceil(($font-size-base * 2.4)) !default;
 
 $navbar-height: 100px; 
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-bg: $darkgrey; 
 $navbar-inverse-border: none;
+$navbar-padding-vertical: 30px;
 
 $jumbotron-bg: $darkgrey; 
