Started work on migrating existing VizSec website content over to Jekyll.

--- a/src/app/jekyll/_includes/footer.html
+++ b/src/app/jekyll/_includes/footer.html
@@ -1,3 +1,9 @@
+
+<div class="footer">
+	&copy The VizSec committee; content licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
+</div>
+
+
 <script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script src="/assets/js/jquery.tinycarousel.min.js"></script>
@@ -8,3 +14,4 @@
 		$('#slider1').tinycarousel();
 	});
 </script>
+
