--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -17,7 +17,7 @@
 				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Commitee</span></a></li>
 				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Contact</span></a></li>
 				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
-				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
+				<li><a href="/about"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
 	</div>
