--- a/src/app/jekyll/_includes/committee.html
+++ b/src/app/jekyll/_includes/committee.html
@@ -1,4 +1,6 @@
+
 <div class="row">
+	<a name="committee" class="page-anchor"></a>
 	<div class="col-md-6">
 		<h3>Organising Committee</h3>
 		<ul>
@@ -9,6 +11,7 @@
 				<span class="committee affiliation">{{ member.affiliation }}</span>
 			</li>
 		{% endfor %}
+			<li class="no-bullet vspacebig"><a href="/roles" class="btn btn-default btn-sm">Roles and responsibilities »</a></li>
 		</ul>
 	</div>
 	<div class="col-md-6" >
