--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -13,10 +13,10 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav ">
-				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
-				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Commitee</span></a></li>
-				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Contact</span></a></li>
-				<li><a href="#"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
+				<li><a href="/#call"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
+				<li><a href="/#committee"><span class="nav-link-sep highlight">/&nbsp;</span>Commitee</span></a></li>
+				<li><a href="/#contact"><span class="nav-link-sep highlight">/&nbsp;</span>Contact</span></a></li>
+				<li><a href="/blog"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
 				<li><a href="/about"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
