- Worked on the responsiveness of the site; tested on iPhone and   Chrome's screensize testing functions so far - Added and linked to previous years' vizsec websites

--- a/src/app/jekyll/_includes/committee.html
+++ b/src/app/jekyll/_includes/committee.html
@@ -11,7 +11,7 @@
 				<span class="committee affiliation">{{ member.affiliation }}</span>
 			</li>
 		{% endfor %}
-			<li class="no-bullet vspacebig"><a href="/roles" class="btn btn-default btn-sm">Roles and responsibilities »</a></li>
+			<a href="/roles" class="align-to-list vspacebig btn btn-default btn-sm">Roles and responsibilities »</a>
 		</ul>
 	</div>
 	<div class="col-md-6" >
