--- a/src/app/jekyll/_includes/footer.html
+++ b/src/app/jekyll/_includes/footer.html
@@ -1,6 +1,8 @@
 
 <div class="footer">
-	&copy The VizSec committee; content licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
+	<div>
+	&copy The VizSec team; content licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
+	</div>
 </div>
 
 
