--- a/src/app/jekyll/_sass/_bootstrap_variables.scss
+++ b/src/app/jekyll/_sass/_bootstrap_variables.scss
@@ -27,4 +27,7 @@ $navbar-inverse-bg: $darkgrey;
 $navbar-inverse-border: none;
 $navbar-padding-vertical: 30px;
 
+$dl-horizontal-xs-offset: 70px;
+$dl-horizontal-xs-threshold: 400px;
+
 $jumbotron-bg: $darkgrey; 
