--- a/src/app/jekyll/_includes/call.html
+++ b/src/app/jekyll/_includes/call.html
@@ -1,10 +1,10 @@
 
 <a name="call" class="page-anchor"></a>
 <h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Call for Papers</h2>
-<p>The 13th IEEE Symposium on Visualization for Cyber Security (VizSec) is a forum that brings together researchers and practitioners from academia, government, and industry to address the needs of the cybersecurity community through new and insightful visualization and analysis techniques. VizSec provides an excellent venue for fostering greater exchange and new collaborations on a broad range of security- and privacy-related topics. VizSec in 2016 will be held in Baltimore, MD, USA in conjunction with IEEE VIS.
+<p>The 13th IEEE Symposium on Visualization for Cyber Security (VizSec) is a forum that brings together researchers and practitioners from academia, government, and industry to address the needs of the cybersecurity community through new and insightful visualization and analysis techniques. VizSec provides an excellent venue for fostering greater exchange and new collaborations on a broad range of security- and privacy-related topics. VizSec in 2016 will be held in Baltimore, MD, USA in conjunction with IEEE VIS.</p>
 
-The purpose of VizSec is to explore effective and scalable visual interfaces for security domains such as network security, computer forensics, reverse engineering, insider threat detection, cryptography, privacy, user assisted attacks prevention, compliance management, wireless security, secure coding, and penetration testing.
+<p>The purpose of VizSec is to explore effective and scalable visual interfaces for security domains such as network security, computer forensics, reverse engineering, insider threat detection, cryptography, privacy, user assisted attacks prevention, compliance management, wireless security, secure coding, and penetration testing.</p>
 
-More information on format and submissions will be coming soon.</p>
-<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+<p>More information on format and submissions will be coming soon.</p>
+
 
