--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="pull-right"><img id="ieee" src="/assets/img/branding_ieee.png"/></div>
+	<div class="hidden-xs pull-right"><img id="ieee" src="/assets/img/branding_ieee.png"/></div>
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -14,8 +14,7 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav ">
 				<li><a href="/#call"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
-				<li><a href="/#committee"><span class="nav-link-sep highlight">/&nbsp;</span>Commitee</span></a></li>
-				<li><a href="/#contact"><span class="nav-link-sep highlight">/&nbsp;</span>Contact</span></a></li>
+				<li><a href="/past"><span class="nav-link-sep highlight">/&nbsp;</span>Past Years</a></li>
 				<li><a href="/blog"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
 				<li><a href="/about"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
 			</ul>
