--- a/src/app/jekyll/_sass/_base.scss
+++ b/src/app/jekyll/_sass/_base.scss
@@ -3,6 +3,8 @@
 	VizSec base SASS styling
 */
 
+@charset "UTF-8";
+
 body {
   padding-top: floor(($navbar-height));
   background: $vizsec_dark;
@@ -28,6 +30,11 @@ ul {
     margin:0;
 }
 
+.header-magnifier {
+	height:25px;
+	margin-right:10px;
+}
+
 .container {
 	padding: 0px 40px 0px 40px;
 }
@@ -42,7 +49,7 @@ li {
 }
 
 li:before {
-    content: "» ";
+    content: "\BB ";
     color: $vizsec_dark; 
 }
 
