--- a/src/app/jekyll/_includes/committee.html
+++ b/src/app/jekyll/_includes/committee.html
@@ -6,7 +6,13 @@
 		<ul>
 		{% for member in site.data.committee %}
 			<li>
-				<span class="committee name">{{ member.name }}</span>, 
+				<span class="committee name">
+					{% if member.url %}
+						<a href="{{ member.url }}">{{ member.name }}</a>,
+					{% else %}
+						{{ member.name }},
+					{% endif %}
+				</span> 
 				<span class="committee role">{{ member.role }}</span><br>
 				<span class="committee affiliation">{{ member.affiliation }}</span>
 			</li>
@@ -16,11 +22,17 @@
 	</div>
 	<div class="col-md-6" >
 		<h3>Steering Committee</h3>
-		<div style="column-count:2">
+		<div class="steering-committee">
 			<ul >
 			{% for member in site.data.steering %}
 				<li>
-					<span class="committee name">{{ member.name }}</span><br>
+					<span class="committee name">
+						{% if member.url %}
+							<a href="{{ member.url }}">{{ member.name }}</a>
+						{% else %}
+							{{ member.name }}
+						{% endif %}
+					</span><br>
 					<span class="committee affiliation">{{ member.affiliation }}</span>
 				</li>
 			{% endfor %}
