A number of bugfixes for iPhone/iPad layout

--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -1,6 +1,7 @@
 
+<div class="navbar-underlay"></div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="hidden-xs pull-right"><img id="ieee" src="/assets/img/branding_ieee.png"/></div>
+	<div class="hidden-xs hidden-sm pull-right"><a href="http://www.ieee.org/"><img id="ieee" src="/assets/img/branding_ieee.png"/></a></div>
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
