--- a/src/app/jekyll/roles/index.html
+++ b/src/app/jekyll/roles/index.html
@@ -5,7 +5,7 @@ layout: default
 <h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Committee Roles</h2>
 
 <p>
-	These are the roles and responsibilities for members of the VizSec organizing committee.
+These are the roles and responsibilities for members of the VizSec <a href="/#committee">organizing committee</a>.
 </p>
 
 <h3>Chair</h3>
