Small bugfixes here and there as a result of output from html-lint

--- a/src/app/jekyll/blog/index.html
+++ b/src/app/jekyll/blog/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Blog</h2>
+<h2><img alt="Magnifying glass" src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Blog</h2>
 
 {% for post in paginator.posts %}
   <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
