--- a/src/app/jekyll/publicity/index.html
+++ b/src/app/jekyll/publicity/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Publicity</h2>
+<h2><img alt="Magnifying glass" src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Publicity</h2>
 <p>
 	Below is a list of the places in which VizSec has publicized itself in the past.
 </p>
