--- a/src/app/jekyll/_includes/committee.html
+++ b/src/app/jekyll/_includes/committee.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-	<a name="committee" class="page-anchor"></a>
+	<a id="committee" class="page-anchor"></a>
 	<div class="col-md-6">
 		<h3>Organising Committee</h3>
 		<ul>
