--- a/src/app/jekyll/_includes/footer.html
+++ b/src/app/jekyll/_includes/footer.html
@@ -1,7 +1,7 @@
 
 <div class="footer">
 	<div>
-	&copy The VizSec team; content licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
+	&copy; The VizSec team; content licensed under <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
 	</div>
 </div>
 
