--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -1,7 +1,7 @@
 
 <div class="navbar-underlay"></div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="hidden-xs hidden-sm pull-right"><a href="http://www.ieee.org/"><img id="ieee" src="/assets/img/branding_ieee.png"/></a></div>
+	<div class="hidden-xs hidden-sm pull-right"><a href="http://www.ieee.org/"><img id="ieee" src="/assets/img/branding_ieee.png" alt="IEEE Logo"/></a></div>
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,7 +10,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/"><img src="/assets/img/branding_logo.png"/></a>
+			<a class="navbar-brand" href="/"><img src="/assets/img/branding_logo.png" alt="VizSec Logo"/></a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav ">
