--- a/src/app/jekyll/_includes/twocolumn.html
+++ b/src/app/jekyll/_includes/twocolumn.html
@@ -7,13 +7,13 @@
 		</div>
 		<div class="col-md-4 sidebar">
 			<div>
-				<a name="contact" class="page-anchor"></a>
+				<a id="contact" class="page-anchor"></a>
 				<h4>Get in Touch</h4>
 				<p>
 				Email questions to <a href="mailto:vizsec2016@easychair.org">vizsec2016@easychair.org</a>, or you can post to our <a href="https://groups.google.com/forum/#!forum/vizsec">Google group.</a>
 				</p>
 				<p>
-				<img src="/assets/img/branding_twitter.png" id="twitter"/> Follow <a href="https://twitter.com/vizsec">@vizsec</a> on Twitter! 
+				<img src="/assets/img/branding_twitter.png" alt="Twitter Logo" id="twitter"/> Follow <a href="https://twitter.com/vizsec">@vizsec</a> on Twitter! 
 				</p>
 			</div>
 			<div>
