--- a/src/app/jekyll/about/index.html
+++ b/src/app/jekyll/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>About VizSec</h2>
+<h2><img alt="Magnifying glass" src="/assets/img/branding_magnifier.png" class="header-magnifier"/>About VizSec</h2>
 
 <p>VizSec started in 2004 as the <a href="http://www.cs.fit.edu/~pkc/vizdmsec04/">Workshop on Visualization and Data Mining for Computer Security</a> at <a href="http://www.sigsac.org/ccs/CCS2004/workshops.html">ACM CCS</a>. After that first event, the event got bigger and bigger each year as it rotated between a visualization-focused conference and a security-focused conference. After several different publishers for the proceedings, VizSec in 2010 began to publish proceedings with <a href="https://dl.acm.org/icps.cfm">ACM ICPS</a>. The VizSec ICPS page is available at: <a href="http://dl.acm.org/event.cfm?id=RE500">http://dl.acm.org/event.cfm?id=RE500</a>.</p>
 
