--- a/src/app/jekyll/past/index.html
+++ b/src/app/jekyll/past/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2><img src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Past VizSec Events</h2>
+<h2><img alt="Magnifying glass"  src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Past VizSec Events</h2>
 <p>
 	Since 2004, VizSec has been proudly associated with many conferences. Most recently, VizSec has been associated with IEEE VIS. Below we list the previous VizSec events. 
 	</p>
