--- a/src/app/jekyll/css/main.scss
+++ b/src/app/jekyll/css/main.scss
@@ -1,4 +1,5 @@
 ---
+layout: null
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
@@ -7,7 +8,7 @@
 @import "bootstrap_variables";
 
 // import bootstrap
-@import "../../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "bootstrap/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "base"
