Minor changes after first feedback - Added Diane as program chair - Renamed blog to news

--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -16,7 +16,7 @@
 			<ul class="nav navbar-nav ">
 				<li><a href="/#call"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
 				<li><a href="/past"><span class="nav-link-sep highlight">/&nbsp;</span>Past Years</a></li>
-				<li><a href="/blog"><span class="nav-link-sep highlight">/&nbsp;</span>Blog</a></li>
+				<li><a href="/news"><span class="nav-link-sep highlight">/&nbsp;</span>News</a></li>
 				<li><a href="/about"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
 			</ul>
 		</div><!--/.navbar-collapse -->
