Added sponsorship page content, PDF files, and links to sponsorship page in header

--- a/src/app/jekyll/_includes/header.html
+++ b/src/app/jekyll/_includes/header.html
@@ -15,6 +15,7 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav ">
 				<li><a href="/#call"><span class="nav-link-sep highlight">/&nbsp;</span>Call for Papers</a></li>
+				<li><a href="/sponsorship"><span class="nav-link-sep highlight">/&nbsp;</span>Sponsorship</a></li>
 				<li><a href="/past"><span class="nav-link-sep highlight">/&nbsp;</span>Past Years</a></li>
 				<li><a href="/news"><span class="nav-link-sep highlight">/&nbsp;</span>News</a></li>
 				<li><a href="/about"><span class="nav-link-sep highlight">/&nbsp;</span>About</a></li>
