--- a/src/app/jekyll/sponsorship/index.html
+++ b/src/app/jekyll/sponsorship/index.html
@@ -2,6 +2,43 @@
 layout: default
 ---
 
-<h2><img alt="Magnifying glass" src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Sponsorship</h2>
+<h2><img alt="Magnifying glass" src="/assets/img/branding_magnifier.png" class="header-magnifier"/>Sponsorship Opportunities</h2>
 
-<i>Content to come.</i>
+<p>
+The IEEE VizSec Symposium is inviting support from industry, academia, and government contributors in security and data visualization.
+</p>
+<p>
+As a supporter, we encourage you to join us at VizSec 2016, colocated with <a href="http://ieeevis.org">VIS 2016</a> this October in Baltimore. Supporters receive several new benefits this year:
+
+<ul>
+	<li><strong>Recruitment</strong> — supporters will engage with the talented students and professionals that attend VizSec and VIS 2016, many of whom are actively seeking internships, employment, and collaboration opportunities.</li>
+	<li><strong>Exhibition</strong> — many levels of support include dedicated exhibition space for your organization at VIS 2016.</li>
+	<li><strong>Registration</strong> — most levels include one or more complimentary registrations for representatives from your organization.</li>
+	<li><strong>Exposure</strong> — for all support levels, your organization’s logos will be prominently displayed at all conference events, on the conference web site, and in any conference materials.</li>
+</ul>
+</p>
+
+<h3>Support Options</h3>
+<p>
+Please see the <a href="/files/2016/vis_prospectus_16.pdf">IEEE VIS Support Prospectus</a> for support options. For more information on becoming a sponsor, reach out to <a href="http://web.cs.wpi.edu/~ltharrison/">Lane Harrison</a> at <a href="mailto:lane@cs.wpi.edu">lane@cs.wpi.edu</a>. 
+</p>
+
+<h3>Other Opportunities</h3>
+<p>
+We are open to other suggestions from supporters as well. Past attendees have offered several ideas for specific opportunities at VizSec organizations may be interested in supporting, including:
+<ul>
+	<li>Diversity scholarships</li>
+	<li>Lunch, dinner, or meetups for attendees</li>
+	<li>Coffee breaks</li>
+	<li>Best Paper Award</li>
+</ul>
+</p>
+
+<h3>VizSec Highlights</h3>
+<p>
+VizSec has been rapidly growing in recent years— both in attendance and in the diversity of our attendees and their work.
+</p>
+<p>
+Check out our <a href="http://vizsec.dbvis.de">Proceedings Browser</a> from long-time contributor Fabian Fischer, and our <a href="https://vimeo.com/136256060">highlight video</a> from last year.
+</p>
+
