Made improvements as per John's suggestions on Basecamp: removed roles and responsibilities from main page; renamed blog to news; added some news articles using the mailing list posts; style improvements to Past Years page; and added existing Google Analytics code

--- a/src/app/jekyll/_includes/twocolumn.html
+++ b/src/app/jekyll/_includes/twocolumn.html
@@ -17,7 +17,7 @@
 				</p>
 			</div>
 			<div>
-				<h4>Read our Blog</h4>
+				<h4>VizSec News</h4>
 				<ul>
 					{% for post in site.posts %}
 					<li>
