--- a/src/app/jekyll/_includes/call.html
+++ b/src/app/jekyll/_includes/call.html
@@ -5,6 +5,6 @@
 
 <p>The purpose of VizSec is to explore effective and scalable visual interfaces for security domains such as network security, computer forensics, reverse engineering, insider threat detection, cryptography, privacy, user assisted attacks prevention, compliance management, wireless security, secure coding, and penetration testing.</p>
 
-<p>More information on format and submissions will be coming soon.</p>
+<p>More information on format and submissions can be found <a href="/call">here</a>.</p>
 
 
